k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatter-client
spec:
  selector:
    app: chatter-client
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
