k8s/kestrel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatter-server
spec:
  selector:
    app: chatter-server
  ports:
    - name: http
      port: 5194
      targetPort: 5194
  type: ClusterIP
