k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatter-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: chatter-server
                port:
                  number: 5194          
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatter-client
                port:
                  number: 80
